--- a/src/app/components/multiSelect.css
+++ b/src/app/components/multiSelect.css
@@ -1,5 +1,4 @@
 .custom-multiselect-container {
-    position: relative;
     display: flex;
     align-items: flex-start;
     gap: 20px;
@@ -7,10 +6,10 @@
     max-width: 80%;
     min-width: 50%;
     margin: 2% 0;
+    position: relative;
 }
 
 .custom-multiple-select {
-    position: static;
     width: 100%;
 }
 
@@ -20,8 +19,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 56px;
-    padding: 0 10px;
+    height: 100%;
+    padding: 3% 10px;
     cursor: pointer;
 }
 .custom-selected-options {
@@ -55,15 +54,13 @@
 .custom-select-options {
     display: none;
     position: absolute;
-    left: 0;
     width: 100%;
-    height: fit-content;
-    min-height: 1000px;
+    height: 40vh;
     background-color: #ffffff;
     border: 1px solid #ced4da;
     border-top: none;
-    overflow-y: srcoll;
-    z-index: 1;
+    z-index: 2;
+    overflow: visible;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 .open .custom-select-options {
